# kitchenai-client

./: README.md  pyproject.toml
src/kitchenai_client/: client.py
