[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchenai-client"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "epuerta", email = "esteban_puerta@rhinosearch.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/epuerta/kitchenai-client#readme"
Issues = "https://github.com/epuerta/kitchenai-client/issues"
Source = "https://github.com/epuerta/kitchenai-client"

[tool.hatch.version]
path = "src/kitchenai_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kitchenai_client tests}"

[tool.coverage.run]
source_pkgs = ["kitchenai_client", "tests"]
branch = true
parallel = true
omit = [
  "src/kitchenai_client/__about__.py",
]

[tool.coverage.paths]
kitchenai_client = ["src/kitchenai_client", "*/kitchenai-client/src/kitchenai_client"]
tests = ["tests", "*/kitchenai-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.dev]
dependencies = [
  "coverage[toml]>=6.5",
  "pre-commit",
  "pytest",
  "pytest-sugar",
  "pytest-xdist",
  "git-cliff",
  "bump-my-version",
  "hatch-pip-compile",
]
lock-filename = "requirements-dev.txt"